--- a/_config.yml
+++ b/_config.yml
@@ -17,7 +17,7 @@ description              : "Oompu's blog"
 url                      : "https://parksurk.github.io"
 baseurl                  : ""
 repository               : # GitHub username/repo-name e.g. "mmistakes/minimal-mistakes"
-teaser                   : "/assets/images/teaser_parksurk.png"# path of fallback teaser image, e.g. "/assets/images/500x300.png"
+teaser                   : "/assets/images/teaser_parksurk.png"
 # breadcrumbs            : false # true, false (default)
 words_per_minute         : 200
 comments:
@@ -86,7 +86,7 @@ analytics:
 # Site Author
 author:
   name             : "Surk Park (Antonio)"
-  avatar           : "/assets/images/bio-parksurk-photo.jpg" # path of avatar image, e.g. "/assets/images/bio-photo.jpg"
+  avatar           : "/assets/images/bio-parksurk-photo.jpg"
   bio              : "Dreaming one of startup-nomads in the future zero marginal society."
   location         : "Somewhere"
   email            : parksurk@gmail.com
