--- a/_config.yml
+++ b/_config.yml
@@ -96,9 +96,9 @@ author:
   codepen          :
   dribbble         :
   flickr           :
-  facebook         : "https://www.facebook.com/parksurk"
+  facebook         : "parksurk"
   foursquare       :
-  github           : "https://github.com/parksurk"
+  github           : "parksurk"
   gitlab           :
   google_plus      :
   keybase          :
@@ -110,7 +110,7 @@ author:
   stackoverflow    : # "123456/username" (the last part of your profile url, e.g. https://stackoverflow.com/users/123456/username)
   steam            : # "steamId" (the last part of your profile url, e.g. https://steamcommunity.com/id/steamId/)
   tumblr           :
-  twitter          : "@parksurk"
+  twitter          : "parksurk"
   vine             :
   weibo            :
   xing             :
