--- a/_config.yml
+++ b/_config.yml
@@ -104,14 +104,14 @@ analytics:
 # Site Author
 author:
   name             : "Surk Park (Antonio)"
-  avatar           : "/assets/images/bio-parksurk-photo.jpg"# path of avatar image, e.g. "/assets/images/bio-photo.jpg"
+  avatar           : "/assets/images/parksurk_fb_bio.jpeg"# path of avatar image, e.g. "/assets/images/bio-photo.jpg"
   bio              : "Dreaming one of startup-nomads in the future zero marginal society."
   location         : "Somewhere"
   email            : "parksurk@gmail.com"
   links:
     - label: "Email"
       icon: "fas fa-fw fa-envelope-square"
-       url: mailto:yparksurk@gmail.com
+      url: mailto:yparksurk@gmail.com
     - label: "Website"
       icon: "fas fa-fw fa-link"
       # url: "https://your-website.com"
