--- a/_config.yml
+++ b/_config.yml
@@ -22,7 +22,7 @@ title                    : "Everyday Just a little bit"
 title_separator          : "-"
 name                     : "박석"
 description              : "Oompu's blog"
-url                      : "https://parksurk.github.io"
+url                      : "http://parksurk.github.io"
 baseurl                  : ""
 repository               : # GitHub username/repo-name e.g. "mmistakes/minimal-mistakes"
 teaser                   : # path of fallback teaser image, e.g. "/assets/images/500x300.png"
